# Marketplace-contract

./: Cargo.toml  Makefile.toml  README.md
asset_test_gen/: README.md  create_nft_asset.js
greenenergy-trading/: Cargo.toml
greenenergy-trading/src/: energy_marketplace.rs  lib.rs  token_standard.rs  verification.rs
src/: lib.rs  test.rs
