[package]
name = "greenenergy-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = "=1.0.0" 
serde = { version = "1.0", features = ["derive"] } # For serialization

[lib]
crate-type = ["cdylib"]
